fixes img stretching

--- a/src/components/Exhibition/style.css
+++ b/src/components/Exhibition/style.css
@@ -29,7 +29,8 @@ padding: 27px 0;
 	margin:5px 0;
 }
 .top .inset img{
-	height: 80vh;
+	height: 44vh;
+	max-width: none;
 	width: auto;
 }
 .top .inset {
